# omega

./: .gitignore  Cargo.toml  Dioxus.toml  License  Readme.md  build.rs
assets/css/: normalize.css  style.css
src/: cfg.rs  main.rs  md.rs  omega.rs  svg.rs  test.md  utils.rs
src/components/: app.rs  chat.rs  history.rs  mod.rs  svg.rs
